added github pages in package.json second time

--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{ "homepage": "https://narashimha05.github.io/skullcandywebsite",
+{ "homepage": "http://narashimha05.github.io/skullcandywebsite",
   "name": "skullcandywebsite",
   "version": "0.1.0",
   "private": true,
